<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/label_preference_category_general"
        app:key="@string/key_preference_category_general">

        <SwitchPreference
            app:key="@string/key_pref_push_notification"
            app:title="@string/title_pref_push_notification"
            app:summary="@string/pref_notification_summary"
            app:summaryOn="@string/pref_notification_summary_on"
            app:summaryOff="@string/pref_notification_summary_off"
            app:defaultValue="@string/pref_notification_default_value"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="@string/key_pref_text_size"
            app:title="@string/title_pref_text_size"
            app:summary="@string/pref_text_size_summary"
            app:defaultValue="16"
            app:entries="@array/text_size_entries"
            app:entryValues="@array/text_size_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/content_sync_summary_off"
            app:summaryOn="@string/content_sync_summary_on"
            app:title="@string/content_sync_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/label_preference_category_about_app"
        app:key="@string/key_preference_category_about_app"
        app:summary="@string/summary_preference_category_about_app">

        <Preference
            app:title="@string/title_pref_app_version"
            app:key="@string/key_pref_app_version"
            app:summary="@string/pref_version_summary"/>

        <Preference
            app:title="@string/title_pref_app_policy"
            app:key="@string/key_pref_app_policy"
            app:summary="@string/pref_policy_summary"/>

        <Preference
            app:title="@string/title_pref_rate_app"
            app:key="@string/key_pref_rate_app"
            app:summary="@string/pref_rate_app_summary"/>

    </PreferenceCategory>

</PreferenceScreen>